Fixed issues with dropdown components not showing properly and not allowing modal to close

--- a/src/styles/references.css
+++ b/src/styles/references.css
@@ -28,8 +28,3 @@ div.ui.bottom.attached.segment.active.tab {
 .editor-container {
     padding: 20px;
 }
-
-.ui.dropdown .menu {
-    right: 0;
-    left: auto;
-}
